unix/lang/tests/error/error_line_number_with_line_numbers.yab
#expect#---Error in error_line_number_with_line_numbers.yab, line 6: syntax error
#expect#   1000 this does not compute :-/
#expect#             ^~~~
#expect#---Error: Program not executed

1000 this does not compute :-/
